[project]
name = "story-surprisal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "gutenbergpy>=0.3.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "py-gutenberg>=1.0.3",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "tslearn>=0.6.3",
]
